--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+*.cpp
 # Virtual environment
 venv/
 
@@ -18,3 +18,6 @@ instance/
 
 # OS files
 .DS_Store
+
+codeAnalysis
+optimized
