--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,209 @@
+accelerate==1.6.0
+aiofiles==23.2.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
 annotated-types==0.7.0
+anthropic==0.49.0
 anyio==4.9.0
+asgiref==3.8.1
 asttokens==3.0.0
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
 beautifulsoup4==4.13.3
+bitsandbytes==0.45.5
+build==1.2.2.post1
+cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
+click==8.1.8
+coloredlogs==15.0.1
+contourpy==1.3.1
+cycler==0.12.1
+dataclasses-json==0.6.7
+datasets==3.5.0
 decorator==5.2.1
+Deprecated==1.2.18
+diffusers==0.32.2
+dill==0.3.8
+display==1.0.0
 distro==1.9.0
 dotenv==0.9.9
+durationpy==0.9
 executing==2.2.0
+fastapi==0.115.12
+ffmpy==0.5.0
+filelock==3.18.0
+flatbuffers==25.2.10
+fonttools==4.57.0
+frozenlist==1.5.0
+fsspec==2024.12.0
+google==3.0.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.166.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.69.2
+gradio==5.23.3
+gradio_client==1.8.0
+greenlet==3.1.1
+groovy==0.1.2
+grpcio==1.71.0
+grpcio-status==1.71.0
 h11==0.14.0
 httpcore==1.0.7
+httplib2==0.22.0
+httptools==0.6.4
 httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.30.1
+humanfriendly==10.0
 idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
 ipython==9.0.2
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
+Jinja2==3.1.6
 jiter==0.9.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+kiwisolver==1.4.8
+kubernetes==32.0.1
+langchain==0.3.23
+langchain-chroma==0.2.2
+langchain-community==0.3.21
+langchain-core==0.3.51
+langchain-openai==0.3.12
+langchain-text-splitters==0.3.8
+langsmith==0.3.30
+longchain==0.4.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+mmh3==5.1.0
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.3.2
+multiprocess==0.70.16
+mypy-extensions==1.0.0
+narwhals==1.34.1
+networkx==3.4.2
+numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+oauthlib==3.2.2
+onnxruntime==1.21.0
 openai==1.70.0
+opentelemetry-api==1.32.0
+opentelemetry-exporter-otlp-proto-common==1.32.0
+opentelemetry-exporter-otlp-proto-grpc==1.32.0
+opentelemetry-instrumentation==0.53b0
+opentelemetry-instrumentation-asgi==0.53b0
+opentelemetry-instrumentation-fastapi==0.53b0
+opentelemetry-proto==1.32.0
+opentelemetry-sdk==1.32.0
+opentelemetry-semantic-conventions==0.53b0
+opentelemetry-util-http==0.53b0
+orjson==3.10.16
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
+pillow==11.1.0
+plotly==6.0.1
+posthog==3.24.1
 prompt_toolkit==3.0.50
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.4
+psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.11.1
+pydantic-settings==2.8.1
 pydantic_core==2.33.0
+pydub==0.25.1
 Pygments==2.19.1
+pyparsing==3.2.3
+pypdf==5.4.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rsa==4.9
+ruff==0.11.2
+safehttpx==0.1.6
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+semantic-version==2.10.0
+setuptools==78.1.0
+shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.40
 stack-data==0.6.3
+starlette==0.46.1
+sympy==1.13.1
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+tomlkit==0.13.2
+torch==2.6.0
 tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.51.0
+triton==3.2.0
+typer==0.15.2
+typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.0
+tzdata==2025.2
+uritemplate==4.1.1
 urllib3==2.3.0
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.5
 wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==15.0.1
+wrapt==1.17.2
+xxhash==3.5.0
+yarl==1.19.0
+zipp==3.21.0
+zstandard==0.23.0
